--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,20 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@components": ["src/components"],
+      "@components/*": ["src/components/*"],
+      "@hooks": ["src/hooks"],
+      "@hooks/*": ["src/hooks/*"],
+      "@layout": ["src/layout"],
+      "@layout/*": ["src/layout/*"],
+      "@lib": ["src/lib"],
+      "@lib/*": ["src/lib/*"],
+      "@models": ["src/models"],
+      "@models/*": ["src/models/*"],
+      "@pages": ["src/pages"],
+      "@store": ["src/store"],
+      "@styles/*": ["src/styles/*"]
     }
   }
 }
